change icons and background

--- a/css/main.css
+++ b/css/main.css
@@ -163,7 +163,7 @@ body {width: 92%; margin: 0 auto} /* Center page without wrapper */
 /* Backgrounds */
 
 .bg-1{
-  background-image: url('../images/floor.jpg');
+  background-image: url("https://michellealgya.com/wp-content/uploads/2016/07/Michelle-Algya-Web-Design-Web-Designer-Missouri-Computer-Home-Page-Background.jpg");
 }
 
 /* Header */
